--- a/vite_project/package.json
+++ b/vite_project/package.json
@@ -3,7 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+
+  "homepage": "https://Sociolegal-Lab.github.io/SC_lab/SC_lab_website",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
