--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
   "homepage": "https://Sociolegal-Lab.github.io/SC_lab/SC_lab_website",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -19,14 +17,21 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
+    "@eslint/css": "^0.11.0",
+    "@eslint/js": "^9.34.0",
+    "@eslint/json": "^0.13.2",
+    "@eslint/markdown": "^7.2.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
-    "eslint": "^9.33.0",
+    "eslint": "^9.34.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "prettier": "^3.6.2",
     "vite": "^7.1.2"
   }
 }
