--- a/public/data/projects/project_1.json
+++ b/public/data/projects/project_1.json
@@ -4,5 +4,5 @@
         null,
         null
     ],
-    "brief_introduction": null
+    "brief_introduction": "Anim laboris in anim cupidatat voluptate ex fugiat ut. Ut cillum deserunt nisi dolor exercitation esse mollit voluptate duis aute deserunt magna non elit."
 }
