projectColumn.jsx set

--- a/public/data/projects/project_1.json
+++ b/public/data/projects/project_1.json
@@ -1,9 +1,9 @@
 {
-    "name": "Legal Tech",
+    "name": "Legal Tech 1",
     "duration": "2020-2040",
     "contributors":[
-        null,
-        null
+        "Zack",
+        "Pluviophile"
     ],
     "link": "https://github.com/Sociolegal-Lab/Evaluating-Cultural-Diversity-of-Large-Language-Models-in-the-Moral-Machine-Experiment",
     "brief_introduction": "Anim laboris in anim cupidatat voluptate ex fugiat ut. Ut cillum deserunt nisi dolor exercitation esse mollit voluptate duis aute deserunt magna non elit.",
