--- a/src/data/projects/project_2.json
+++ b/src/data/projects/project_2.json
@@ -1,8 +1,11 @@
 {
-    "name": "Cool AI 2",
+    "name": "Legal Tech 2",
+    "duration": "2020-2040",
     "contributors":[
         null,
         null
     ],
-    "brief_introduction": null
+    "link": "https://github.com/Sociolegal-Lab/Evaluating-Cultural-Diversity-of-Large-Language-Models-in-the-Moral-Machine-Experiment",
+    "brief_introduction": "Anim laboris in anim cupidatat voluptate ex fugiat ut. Ut cillum deserunt nisi dolor exercitation esse mollit voluptate duis aute deserunt magna non elit.",
+    "introduction": "Culpa et reprehenderit veniam reprehenderit cillum cillum in ad aliquip veniam cillum. Veniam tempor esse quis sit cillum proident laborum esse velit dolore adipisicing ad. Ipsum veniam laborum veniam sunt nulla eiusmod adipisicing ipsum nisi esse sit ut."
 }
