--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "deploy": "gh-pages -d dist",
         "dev": "npm run build && npm run preview",
         "build": "vite build",
+        "vite": "vite",
         "lint": "eslint .",
         "preview": "vite preview",
         "sync:once": "node scripts/sync.js",
