project column finish. (RWD)

--- a/src/data/projects/project_2.json
+++ b/src/data/projects/project_2.json
@@ -1,11 +1,12 @@
 {
-    "name": "Legal Tech 2",
+    "name": "longfdafdasdfdf sdfasdff",
     "duration": "2020-2040",
     "contributors":[
-        null,
-        null
+        "Pluviophile",
+        "Zack",
+        "Jimmy Yu"
     ],
     "link": "https://github.com/Sociolegal-Lab/Evaluating-Cultural-Diversity-of-Large-Language-Models-in-the-Moral-Machine-Experiment",
     "brief_introduction": "Anim laboris in anim cupidatat voluptate ex fugiat ut. Ut cillum deserunt nisi dolor exercitation esse mollit voluptate duis aute deserunt magna non elit.",
-    "introduction": "Culpa et reprehenderit veniam reprehenderit cillum cillum in ad aliquip veniam cillum. Veniam tempor esse quis sit cillum proident laborum esse velit dolore adipisicing ad. Ipsum veniam laborum veniam sunt nulla eiusmod adipisicing ipsum nisi esse sit ut."
+    "introduction": "Culpa et reprehenderit veniam reprehenderit cillum cillum in ad aliquip veniam cillum. Veniam tempor esse quis sit cillum proident laborum esse velit dolore adipisicing ad. Ipsum veniam laborum veniam sunt nulla eiusmod adipisicing ipsum nisi esse sit ut.Laboris laboris qui ad reprehenderit anim fugiat nisi velit non aliqua incididunt cupidatat ullamco sit. Esse amet adipisicing magna occaecat. Magna commodo irure qui aliqua.Ea cupidatat non mollit nostrud Lorem sit amet. Qui consectetur irure ad non culpa sit nulla deserunt nisi aliquip. Duis fugiat ea mollit minim. Dolor cupidatat voluptate aliqua sit mollit cupidatat exercitation aute labore est eiusmod sit irure. Sunt exercitation excepteur in et duis non. Est ipsum mollit officia officia fugiat labore quis proident consequat eiusmod.Occaecat irure incididunt enim dolore. Laborum officia id deserunt culpa tempor aute labore ut minim consectetur deserunt ut commodo aliqua. Non laboris proident dolor do anim anim aliquip enim pariatur minim officia id est nisi."
 }
