Add a favicon and make backup image when no corresponding news cover

--- a/src/data/projects/project_1.json
+++ b/src/data/projects/project_1.json
@@ -1,5 +1,5 @@
 {
-    "name": "Legal Tech 1",
+    "name": "Legal Tech Project 1",
     "duration": "2020-2040",
     "contributors":[
         "Zack",
