--- a/src/data/projects/project_2.json
+++ b/src/data/projects/project_2.json
@@ -1,10 +1,11 @@
 {
-    "name": "longfdafdasdfdf sdfasdff",
+    "name": "Project 2 (This is a template)",
     "duration": "2020-2040",
     "contributors":[
         "Pluviophile",
         "Zack",
-        "Jimmy Yu"
+        "Jimmy Yu",
+        "David"
     ],
     "link": "https://github.com/Sociolegal-Lab/Evaluating-Cultural-Diversity-of-Large-Language-Models-in-the-Moral-Machine-Experiment",
     "brief_introduction": "Anim laboris in anim cupidatat voluptate ex fugiat ut. Ut cillum deserunt nisi dolor exercitation esse mollit voluptate duis aute deserunt magna non elit.",
