--- a/src/data/projects/project_3.json
+++ b/src/data/projects/project_3.json
@@ -1,5 +1,5 @@
 {
-    "name": "Legal Tech plu",
+    "name": "Legal Tech 3 (This is a template)",
     "duration": "2020-2040",
     "contributors":[
         "Zack",
