--- a/src/data/projects/project_1.json
+++ b/src/data/projects/project_1.json
@@ -1,4 +1,5 @@
 {
+    "id":1,
     "name": "Evaluation of Large Language Models",
     "duration": "2020-2040",
     "contributors":[
@@ -7,5 +8,6 @@
     ],
     "link": "https://sociolegal-lab.github.io/leaderBoard.html",
     "brief_introduction": "This study investigates cultural biases in Large Language Models (LLMs) and their impact on cross-cultural representation.",
-    "introduction": "This study investigates cultural biases in Large Language Models (LLMs) and their impact on cross-cultural representation. Focusing on autonomous vehicle ethics and health decision-making, it examines LLMs' handling of culturally-sensitive scenarios. The research aims to develop strategies for enhancing cultural diversity in LLMs, improving fairness, and informing global governance frameworks."
+    "introduction": "This study investigates cultural biases in Large Language Models (LLMs) and their impact on cross-cultural representation. Focusing on autonomous vehicle ethics and health decision-making, it examines LLMs' handling of culturally-sensitive scenarios. The research aims to develop strategies for enhancing cultural diversity in LLMs, improving fairness, and informing global governance frameworks.",
+    "photo":"project_1.jpeg"
 }
