--- a/src/data/projects/project_5.json
+++ b/src/data/projects/project_5.json
@@ -1,4 +1,5 @@
 {
+    "id":5,
     "name": "Template",
     "duration": "2020-2040",
     "contributors":[
@@ -8,5 +9,6 @@
     ],
     "link": "https://github.com/Sociolegal-Lab/",
     "brief_introduction": "Labore aliqua ut ex eu reprehenderit voluptate aute deserunt fugiat ullamco mollit voluptate deserunt veniam.",
-    "introduction": "Adipisicing officia sit cupidatat fugiat proident pariatur et dolore aliquip. Tempor proident consequat est dolore commodo labore proident. Minim velit id nulla nisi mollit ea officia. Incididunt quis in magna voluptate mollit labore occaecat reprehenderit id ut. Do pariatur est velit nulla officia nulla Lorem velit ex."
+    "introduction": "Adipisicing officia sit cupidatat fugiat proident pariatur et dolore aliquip. Tempor proident consequat est dolore commodo labore proident. Minim velit id nulla nisi mollit ea officia. Incididunt quis in magna voluptate mollit labore occaecat reprehenderit id ut. Do pariatur est velit nulla officia nulla Lorem velit ex.",
+    "photo":"project_5.png"
 }
