--- a/src/data/projects/projects_index.json
+++ b/src/data/projects/projects_index.json
@@ -3,5 +3,7 @@
   "project_2.json",
   "project_3.json",
   "project_4.json",
-  "project_5.json"
+  "project_6.json",
+  "project_7.json",
+  "project_8.json"
 ]
