--- a/src/data/projects/project_4.json
+++ b/src/data/projects/project_4.json
@@ -7,7 +7,7 @@
         "Sheng-Wen Chang",
         "Shen-Jing Feng"
     ],
-    "link": "https://github.com/Sociolegal-Lab/",
-    "brief_introduction": "?",
-    "introduction": "?"
+    "link": "",
+    "brief_introduction": "",
+    "introduction": ""
 }
