--- a/src/data/projects/project_4.json
+++ b/src/data/projects/project_4.json
@@ -1,7 +1,7 @@
 {
     "id":4,
     "name": "CrowdEyes",
-    "duration": "2020-2040",
+    "duration": "2023",
     "contributors":[
         "Han-Ting Yu",
         "Sheng-Wen Chang",
