members rwd fixed

--- a/src/data/projects/project_4.json
+++ b/src/data/projects/project_4.json
@@ -9,5 +9,6 @@
     ],
     "link": "https://github.com/Sociolegal-Lab",
     "brief_introduction": "",
-    "introduction": ""
+    "introduction": "",
+    "photo":"project_4.gif"
 }
