Modify according to TBI.md

--- a/src/data/projects/project_5.json
+++ b/src/data/projects/project_5.json
@@ -3,7 +3,7 @@
   "name": "CrowdEyes:AI Editor",
   "duration": "2025",
   "contributors": [
-    "Niu,Chun Chieh"
+    "Chun-Chieh Niu"
   ],
   "link": "",
   "brief_introduction": "The AI Social Media Editor is an intelligent system that integrates computer vision and large language models to automatically analyze volleyball images, extract key information, and generate natural, context-aware social media captions. It streamlines content production and enhances efficiency for sports-related media.",
