--- a/src/data/projects/projects_index.json
+++ b/src/data/projects/projects_index.json
@@ -2,6 +2,7 @@
   "project_1.json",
   "project_2.json",
   "project_4.json",
+  "project_5.json",
   "project_6.json",
   "project_7.json",
   "project_8.json"
