--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,33 @@
 # .github/workflows/deploy.yml
 name: Deploy new site to org Pages
+
 on:
   push:
     branches: [ deploy ]   # 依你的預設分支調整
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with: { node-version: 22.12.0 }
-      - run: npm ci && npm run build     # 依你的專案調整打包指令
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22.12.0
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build site
+        run: npm run build   # 依你的專案調整打包指令
+
+      # 🔥 關鍵：為 SPA 建立 404.html，讓 GitHub Pages 404 也回到你的 React/Vite App
+      - name: Create 404.html for SPA routing
+        run: cp dist/index.html dist/404.html
+
       - name: Deploy to Sociolegal-Lab.github.io
         uses: peaceiris/actions-gh-pages@v4
         with:
