fix: :fire: fix project_8 name

--- a/src/data/projects/project_8.json
+++ b/src/data/projects/project_8.json
@@ -1,6 +1,6 @@
 {
     "id": 8,
-    "name": "NSTC Research Center for Pandemic Prevention Science Project",
+    "name": "Cross-Cultural Assessment of Bias and Health Communication in LLMs",
     "duration": "2022-2025",
     "contributors":[
         "Shao-Man Lee", "Mu-Ko Chou"
